--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.questions{
+    border-left: 8px solid green;
+    padding: 15px;
+    max-width: 600px;
+    background-color: #f8fffe;
+    height: 50px;
+    margin-top: 20px
+    
+    
+}
