--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     max-width: 600px;
     background-color: #f8fffe;
     height: 50px;
-    margin-top: 20px
+    margin-top: 20px;
     
     
 }
